<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:icon="@drawable/ic_info_black_24dp"
        android:key="pref_key_general_settings">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="pref_key_display_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name"
            android:summary="@string/pref_display_name_summary" />

        <ListPreference
            android:title="@string/pref_unit_label"
            android:key="@string/pref_unit_key"
            android:defaultValue="@string/pref_unit_default"
            android:entryValues="@array/pref_unit_values"
            android:entries="@array/pref_unit_options"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:key="pref_key_notification_settings">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
        when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync"
        android:key="pref_key_data_sync_settings">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:key="sync_frequency"
            android:defaultValue="180"
            android:title="@string/pref_title_sync_frequency"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines.>
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference-->
    </PreferenceCategory>
</PreferenceScreen>