<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="10"
        android:icon="@drawable/home"
        android:title="@string/action_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_special"
        android:orderInCategory="20"
        android:icon="@drawable/special"
        android:title="@string/action_special"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_chat"
        android:orderInCategory="30"
        android:icon="@drawable/chat"
        android:title="@string/action_chat"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_photo_stream"
        android:orderInCategory="40"
        android:icon="@drawable/photo_stream"
        android:title="@string/action_photo_stream"
        app:showAsAction="always|withText" />

    <item android:id="@+id/more"
        android:icon="@drawable/more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_refresh"
                android:orderInCategory="50"
                android:icon="@drawable/refresh"
                android:title="@string/action_refresh"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="60"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_about"
                android:orderInCategory="70"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us"
                app:showAsAction="never|withText" />
        </menu>
    </item>
</menu>
